--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.5",
+    "@mui/lab": "^5.0.0-alpha.161",
     "@mui/material": "^5.15.5",
     "@mui/x-data-grid": "^6.18.7",
     "@mui/x-date-pickers": "^6.19.0",
@@ -16,6 +17,7 @@
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
