--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.5.1",
+    "date-fns-timezone": "^0.1.4",
     "dayjs": "^1.11.10",
+    "dayjs-plugin-utc": "^0.1.2",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
